<resources>
    <string name="app_name">Messenger</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_save">Save</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="app_register">Register</string>
    <string name="facebook_app_id">313612646179772</string>
    <string name="fb_login_protocol_scheme">fb313612646179772</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthDate">Birth Date</string>
    <string name="prompt_image">Image</string>

</resources>
